--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -10,15 +10,23 @@
 	text-align: center;
 	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
 	border-radius: 4px;
-  transition: transform 0.1s;
+	transition: transform 0.1s;
 
 	&--light {
 		background-color: #f2f9fe;
 		color: $primary-color;
 	}
 
+	&:hover {
+		transform: translateY(-0.5rem);
+	}
+}
 
-  &:hover {
-    transform: translateY(-0.5rem);
-  }
+.h1 {
+	font-size: 20px;
+	display: flex;
+	align-items: center;
+	letter-spacing: 0.15px;
+	color: rgba(0, 0, 0, 0.87);
+	margin-bottom: 1.5rem;
 }
