--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -144,3 +144,104 @@
 		height: 100%;
 	}
 }
+
+.reg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.25);
+	display: none;
+	justify-content: center;
+	align-items: center;
+
+	&.active {
+		display: flex;
+	}
+
+	&__window {
+		width: 64rem;
+		padding: 2.1rem;
+		background-color: #fafafa;
+		box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+		border-radius: 4px;
+	}
+
+	&__form {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+
+		form {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			flex-basis: 50%;
+		}
+	}
+
+	&__label {
+		position: relative;
+		display: flex;
+		padding: 1rem 5rem;
+		padding-bottom: 0;
+		width: 100%;
+		background-color: rgba(33, 33, 33, 0.08);
+		border-radius: 4px 4px 0px 0px;
+		display: flex;
+		flex-direction: column;
+		margin: 0.8rem 0;
+		color: rgba(0, 0, 0, 0.38);
+		font-size: 1.2rem;
+		border-bottom: 1px solid rgba(33, 33, 33, 0.15);
+
+		svg {
+			position: relative;
+			fill: #018786;
+			position: absolute;
+			right: 1rem;
+			top: 50%;
+			transform: translateY(-50%);
+			opacity: 0;
+			pointer-events: none;
+			width: 2rem;
+			height: 2rem;
+		}
+
+		&.active svg {
+			opacity: 1;
+			pointer-events: visible;
+		}
+	}
+
+	&__input {
+		background-color: transparent;
+		border-color: transparent;
+		padding: 0.5rem 0;
+		border-bottom: 1px solid rgba(33, 33, 33, 0.1);
+		outline: none;
+		font-size: 1.6rem;
+	}
+
+	&__form--avatar {
+		width: 19.8rem;
+		height: 19.8rem;
+		flex-basis: 50%;
+		cursor: pointer;
+		fill: #757575;
+	}
+
+	&__buttons {
+		flex-basis: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		margin-top: 8rem;
+
+		& > *:first-child {
+			margin-right: 2rem;
+		}
+	}
+}
