--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -12,9 +12,19 @@
 	border-radius: 4px;
 	transition: transform 0.1s;
 
-	&--light {
+	&--ghost {
 		background-color: #f2f9fe;
 		color: $primary-color;
+	}
+
+	&--light {
+		background-color: #E3F2FD;
+		color: $primary-color;
+	}
+
+	&--dark {
+		background-color: $primary-color;
+		color: #FFFFFF;
 	}
 
 	&:hover {
