--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -245,3 +245,85 @@
 		}
 	}
 }
+
+.game {
+	&__container {
+		max-width: 1000px;
+		margin: 3.3rem auto;
+		padding: 3rem;
+		background-color: rgba(0, 0, 0, 0.05);
+		border-radius: 5px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	&__timer {
+		background-color: #ffffff;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
+		font-weight: 500;
+		font-size: 36px;
+		color: rgba(0, 0, 0, 0.4);
+		padding: 1rem 8rem;
+	}
+
+	&__cards {
+		padding: 5rem 0;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+		grid-column-gap: 2rem;
+		grid-row-gap: 1.5rem;
+	}
+
+	&__card {
+		perspective: 150rem;
+		height: 18rem;
+		width: 18rem;
+		position: relative;
+		cursor: pointer;
+
+		&--front,
+		&--back {
+			height: 100%;
+			width: 100%;
+			transition: all 0.5s;
+			overflow: hidden;
+			position: absolute;
+
+			img {
+				width: 100%;
+				height: 100%;
+				border-radius: 5px;
+				box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
+			}
+		}
+
+		&--back {
+			transform: rotateY(180deg);
+
+			img {
+				width: 100%;
+				height: 100%;
+				border: 1px solid #999;
+			}
+		}
+
+		&.turned &--front {
+			transform: rotateY(-180deg);
+		}
+
+		&.turned &--back {
+			transform: rotateY(0);
+		}
+
+		&.turned.correct &--back::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: rgba(10, 207, 131, 0.5);
+		}
+	}
+}
