--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -383,3 +383,26 @@
 		color: $primary-color;
 	}
 }
+
+.settings {
+	&__container {
+		max-width: 1000px;
+		margin: 3.3rem auto;
+		padding: 3rem;
+		box-shadow: 0px 6px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
+		border-radius: 5px;
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__input {
+		align-self: flex-start;
+		width: 25rem;
+		border: none;
+		border-bottom: 1px solid #e5e5e5;
+		padding: 1.5rem 0;
+		background-color: transparent;
+		outline: none;
+		margin-bottom: 3rem;
+	}
+}
