--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,42 +1,42 @@
 .btn {
-	text-decoration: none;
-	text-transform: uppercase;
-	cursor: pointer;
-	padding: 1rem 1.6rem;
-	font-weight: 500;
-	font-size: 1.4rem;
-	display: flex;
-	align-items: center;
-	text-align: center;
-	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
-	border-radius: 4px;
-	transition: transform 0.1s;
+  text-decoration: none;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 1rem 1.6rem;
+  font-weight: 500;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2), 0px 1px 18px rgba(0, 0, 0, 0.12), 0px 6px 10px rgba(0, 0, 0, 0.14);
+  border-radius: 4px;
+  transition: transform 0.1s;
 
-	&--ghost {
-		background-color: #f2f9fe;
-		color: $primary-color;
-	}
+  &--ghost {
+    background-color: #f2f9fe;
+    color: $primary-color;
+  }
 
-	&--light {
-		background-color: #E3F2FD;
-		color: $primary-color;
-	}
+  &--light {
+    background-color: #e3f2fd;
+    color: $primary-color;
+  }
 
-	&--dark {
-		background-color: $primary-color;
-		color: #FFFFFF;
-	}
+  &--dark {
+    background-color: $primary-color;
+    color: #ffffff;
+  }
 
-	&:hover {
-		transform: translateY(-0.5rem);
-	}
+  &:hover {
+    transform: translateY(-0.5rem);
+  }
 }
 
 .h1 {
-	font-size: 20px;
-	display: flex;
-	align-items: center;
-	letter-spacing: 0.15px;
-	color: rgba(0, 0, 0, 0.87);
-	margin-bottom: 1.5rem;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+  margin-bottom: 1.5rem;
 }
