--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -151,7 +151,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.25);
   display: none;
   justify-content: center;
@@ -211,9 +211,14 @@
       height: 2rem;
     }
 
-    &.active svg {
+    &.valid svg {
       opacity: 1;
       pointer-events: visible;
+    }
+
+    &.invalid {
+      background-color: rgb(255, 183, 175);
+      color: red;
     }
   }
 
@@ -244,6 +249,12 @@
     & > *:first-child {
       margin-right: 2rem;
     }
+  }
+
+  #add-user.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+    filter: grayscale(100%);
   }
 }
 
