--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,12 +1,14 @@
 .navbar {
-  list-style: none;
-  width: 100%;
-  background-color: $primary-color;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 6.4rem;
+  &__list {
+    list-style: none;
+    width: 100%;
+    background-color: $primary-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 6.4rem;
+  }
 
   &__item--logo {
     display: flex;
