--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,4 +1,4 @@
-.navbar {
+.header {
   list-style: none;
   width: 100%;
   background-color: $primary-color;
@@ -59,9 +59,37 @@
     margin: 1.5rem 2.5rem;
     display: flex;
     justify-content: flex-end;
-  }
+    align-items: center;
 
-  &__item:not(:first-child):not(:last-child) {
+    #start,
+    #quit {
+      margin-left: 1.5rem;
+    }
+
+    .profile-avatar {
+      background-color: #ffffff;
+      margin-left: 2rem;
+      border-radius: 50%;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        width: 4rem;
+        border-radius: 50%;
+      }
+    }
+  }
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+
+  &__item {
     width: 9.6rem;
     height: 100%;
     padding: 1rem 0;
@@ -96,10 +124,6 @@
         pointer-events: none;
       }
     }
-  }
-
-  #start {
-    display: none;
   }
 }
 
