--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -335,6 +335,7 @@
     width: 18rem;
     position: relative;
     cursor: pointer;
+    transition: transform 0.2s;
 
     &--front,
     &--back {
@@ -370,7 +371,7 @@
       transform: rotateY(0);
     }
 
-    &.turned.correct &--back::after {
+    &.turned &--back::after {
       content: "";
       position: absolute;
       top: 0;
@@ -378,6 +379,16 @@
       width: 100%;
       height: 100%;
       background-color: rgba(10, 207, 131, 0.5);
+      opacity: 0;
+      transition: 0.5s opacity;
+    }
+
+    &.turned.correct {
+      transform: scale(80%);
+    }
+
+    &.turned.correct &--back::after {
+      opacity: 0.8;
     }
   }
 }
