score calculator and timer

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -363,6 +363,10 @@
       }
     }
 
+    &.turned {
+      pointer-events: none;
+    }
+
     &.turned &--front {
       transform: rotateY(-180deg);
     }
