--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -382,7 +382,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(10, 207, 131, 0.5);
       opacity: 0;
       transition: 0.5s opacity;
     }
@@ -392,7 +391,13 @@
     }
 
     &.turned.correct &--back::after {
+      background-color: rgba(10, 207, 131, 0.5);
       opacity: 0.8;
+    }
+    
+    &.turned.incorrect &--back::after {
+      background-color: rgba(236, 53, 53, 0.884);
+      opacity: 0.5;
     }
   }
 }
