--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -302,14 +302,12 @@
 
 .game {
   &__container {
-    max-width: 1000px;
-    margin: 3.3rem auto;
+    width: 100%;
     padding: 3rem;
-    background-color: rgba(0, 0, 0, 0.05);
-    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
 
   &__timer {
@@ -322,32 +320,34 @@
   }
 
   &__cards {
-    padding: 5rem 0;
+    margin: 5rem 0;
+    min-width: 100rem;
+    min-height: 100rem;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 2rem;
-    grid-row-gap: 1.5rem;
+    justify-content: center;
+    grid-gap: 2rem;
   }
 
   &__card {
     perspective: 150rem;
-    height: 18rem;
-    width: 18rem;
+    height: 100%;
+    width: 100%;
     position: relative;
     cursor: pointer;
     transition: transform 0.2s;
 
     &--front,
     &--back {
-      height: 100%;
+      max-height: 100%;
       width: 100%;
       transition: all 0.5s;
       overflow: hidden;
       position: absolute;
 
       img {
+        object-fit: cover;
         width: 100%;
-        height: 100%;
+        max-height: 100%;
         border-radius: 5px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24);
       }
@@ -357,8 +357,9 @@
       transform: rotateY(180deg);
 
       img {
+        object-fit: cover;
         width: 100%;
-        height: 100%;
+        max-height: 100%;
         border: 1px solid #999;
       }
     }
@@ -394,7 +395,7 @@
       background-color: rgba(10, 207, 131, 0.5);
       opacity: 0.8;
     }
-    
+
     &.turned.incorrect &--back::after {
       background-color: rgba(236, 53, 53, 0.884);
       opacity: 0.5;
